tests/machine/x/cobol/fun_call.error
/tmp/TestCobolCompiler_VMValid_Golden3313344715/013/prog.cob:11: error: syntax error, unexpected USING
/tmp/TestCobolCompiler_VMValid_Golden3313344715/013/prog.cob: in paragraph 'FN_ADD':
/tmp/TestCobolCompiler_VMValid_Golden3313344715/013/prog.cob:16: error: syntax error, unexpected PROCEDURE
/tmp/TestCobolCompiler_VMValid_Golden3313344715/013/prog.cob:17: error: 'A' is not defined
/tmp/TestCobolCompiler_VMValid_Golden3313344715/013/prog.cob:17: error: 'B' is not defined
