tests/machine/x/cobol/fun_call.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T07:46:59Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. FUN-CALL.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-ADD-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       PERFORM FN_ADD USING 2 3
       DISPLAY FN-ADD-RES
       STOP RUN.
       
       FN_ADD.
           PROCEDURE DIVISION USING A B.
               COMPUTE FN-ADD-RES = A + B
               EXIT.
